...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDoctorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/round_border"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view51"
            android:imeOptions="actionDone" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDoctorEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/round_border"
...
            app:layout_constraintStart_toStartOf="parent"
            android:lines="1"
            app:layout_constraintTop_toBottomOf="@+id/edtDoctorName"
            android:imeOptions="actionDone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDoctorMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/round_border"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:lines="1"
            app:layout_constraintTop_toBottomOf="@+id/edtDoctorMobile" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinnerDoctorGender"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            app:ms_dropdown_height="wrap_content"
            android:hint="Select your gender"
            android:textAlignment="viewStart"
            android:padding="@dimen/_10sdp"
...
            app:layout_constraintStart_toStartOf="parent"
            android:lines="1"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDoctorGender" />


        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinnerDoctorQualification"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            app:ms_dropdown_height="wrap_content"
            android:hint="Select your qualification"
            android:textAlignment="viewStart"
            android:padding="@dimen/_10sdp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:lines="1"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDoctorQualification" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinnerDoctorSpecialization"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            app:ms_dropdown_height="wrap_content"
            android:hint="Select Your Specialization"
            android:textAlignment="viewStart"
            android:padding="@dimen/_10sdp"
...
            android:lines="1"
            android:background="@drawable/spinner_bg"
            app:layout_constraintTop_toBottomOf="@+id/txtSpecialization"
            android:imeOptions="actionDone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDoctorPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/round_border"
...
            app:layout_constraintStart_toStartOf="parent"
            android:lines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDoctorSpecialization" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDoctorConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/round_border"
...
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorDocText"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btnUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageDoctorDoc"
            app:layout_constraintTop_toBottomOf="@+id/doctorDocText"/>

        <Button
            android:id="@+id/btnDoctorRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
...
