<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.LoginActivity"
    android:focusableInTouchMode="true"
    android:focusable="false">
    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/session"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Select Role"
        android:textColor="@color/facebook"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinnerUserType"
        android:layout_width="@dimen/_232sdp"
        android:layout_height="wrap_content"
        app:ms_dropdown_height="wrap_content"
        android:hint="Select Role"
        android:textAlignment="viewStart"
        android:padding="@dimen/_10sdp"
        android:ems="10"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        android:background="@drawable/spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/txtUserType"
        android:imeOptions="actionDone"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerUserType"
        android:imeOptions="actionDone"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/remember_me"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/positive"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/round_bg"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRemember" />


    <TextView
        android:id="@+id/registerHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/no_account"
        android:textColor="@color/facebook"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:text="@string/signup_as"
        android:textColor="@color/quarantine"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerHintText" />

    <Button
        android:id="@+id/btnPatientRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/patient_round_bg"
        android:text="@string/signup_patient"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText" />

    <Button
        android:id="@+id/btnDoctorRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/doctor_round_bg"
        android:text="@string/signup_doctor"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnPatientRegister"
        app:layout_constraintTop_toBottomOf="@+id/registerText" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>