...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view51"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
...
